--- a/styles/style.scss
+++ b/styles/style.scss
@@ -100,7 +100,7 @@ body{
 
     &-portfolio{
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr 2fr;
         grid-column-gap: 30px;
         grid-row-gap: 30px;
@@ -111,29 +111,41 @@ body{
         }
 
         .div1 {
-             grid-area: 1 / 1 / 2 / 3;
+             grid-area: 1 / 0 / 2 / 2;
              position: relative;
              transition: all .2s ease-in-out;
-             .image{
-                background-color: purple;
-                transition: all .2s ease-in-out;
-                width: 100%;
-                height: 100%;
-                border-radius: 10px;
-            } 
+             background-color: purple;
 
              &:hover{
                  transition: all .2s ease-in-out;
+                 border-radius: 0;
 
-                .image{
-                    transform: scale(1.1);
-                }
+                 .div1-inner h1{
+                    transform: translateY(0px);
+                    transition: all .3s ease-in-out;
+                    opacity: 1;
+                 }
+             }
+
+             &-inner{
+                 display: flex;
+                 align-items: flex-end;
+                 justify-content: center;
+                 height: 100%;
+                 padding: 15px;
+                 overflow: hidden;
+                 
+
+                 h1{
+                     transform: translateY(50px);
+                     opacity: 0;
+                 }
              }
         }
 
         .div2 { 
 
-            grid-area: 1 / 3 / 2 / 5; 
+            grid-area: 1 / 1 / 2 / 2; 
             background-color: blue;
         }
         .div3 { 
@@ -222,19 +234,19 @@ body{
         grid-template-rows: repeat(3, 1fr); 
 
         .div1{
-            grid-row: 1 / 2;
+            grid-row: 0 / 1;
             grid-column-start: 1;
             grid-column-end: 2;
         }
 
         .div2 { 
 
-            grid-row: 2 / 3;
+            grid-row: 1 / 2;
             grid-column-start: 1;
             grid-column-end: 2;
         }
         .div3 { 
-            grid-row: 3 / 4;
+            grid-row: 2 / 3;
             grid-column-start: 1;
             grid-column-end: 2;
             background-color: green;
